Fix letter spacing in hire me section

--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -2,7 +2,6 @@
 *::before,
 *::after {
   box-sizing: inherit;
-  font-family: var(--font-sans), sans-serif;
 }
 
 html {
